--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./app.js"></script>
+    <h1>node app</h1>
+    <script src="./liri.js"></script>
   </body>
 </html>
